# ChangeLog for dev-lang/python
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.714 2013/11/23 17:47:09 jer Exp $

  23 Nov 2013; Jeroen Roovers <jer@gentoo.org> python-3.3.2-r2.ebuild,
  python-3.3.3.ebuild:
  Typo.

  23 Nov 2013; Mike Gilbert <floppym@gentoo.org> python-3.3.2-r2.ebuild,
  python-3.3.3.ebuild:
  Update the postinst upgrade message.

*python-3.3.3 (21 Nov 2013)

  21 Nov 2013; Mike Gilbert <floppym@gentoo.org> +python-3.3.3.ebuild:
  Version bump. Thanks to Arfrever for maintaining the patchset.

  12 Nov 2013; Michael Haubenwallner <haubi@gentoo.org>
  +files/python-2.7-issue17919.patch, python-2.7.5-r4.ebuild,
  python-3.2.5-r3.ebuild, +files/python-3.2-issue17919.patch,
  python-3.3.2-r2.ebuild, +files/python-3.3-issue17919.patch:
  Add proposed upstream patches for issue17919, hits AIX.

  10 Nov 2013; Fabian Groffen <grobian@gentoo.org> python-2.7.5-r4.ebuild:
  update mint patch, bug #489940

  08 Nov 2013; Michael Haubenwallner <haubi@gentoo.org>
  +files/python-2.7-issue18235.patch, python-2.7.5-r4.ebuild,
  +files/python-3.2-issue18235.patch, +files/python-3.2-issue19521.patch,
  python-3.2.5-r3.ebuild, +files/python-3.2-issue19529.patch,
  python-3.3.2-r2.ebuild:
  Fix AIX issues seen during bootstrap.

*python-2.7.5-r4 (26 Oct 2013)

  26 Oct 2013; Mike Gilbert <floppym@gentoo.org>
  +files/python-2.7-issue18851.patch, +python-2.7.5-r4.ebuild:
  Apply patch to fix regression in subprocess module, bug 489378.

*python-2.7.5-r3 (16 Oct 2013)
*python-3.2.5-r3 (16 Oct 2013)

  16 Oct 2013; Mike Gilbert <floppym@gentoo.org>
  +files/python-2.7-issue16248.patch, +files/python-3.2-issue16248.patch,
  +python-2.7.5-r3.ebuild, +python-3.2.5-r3.ebuild, -python-2.7.5-r2.ebuild,
  -python-3.2.5-r2.ebuild:
  Apply upstream fix for regression in Tkinter, bug 488208 by jlec.

  20 Oct 2013; Fabian Groffen <grobian@gentoo.org> python-2.7.5-r2.ebuild: