@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.714 2013/11/23 17:47:09 jer Exp $
 
+*python-3.3.3 (01 Dec 2013)
+
+  01 Dec 2013; Fabian Groffen <grobian@gentoo.org> +python-3.3.3.ebuild,
+  python-3.3.2-r2.ebuild:
+  Bump, add back framework install on OSX
+
   23 Nov 2013; Jeroen Roovers <jer@gentoo.org> python-3.3.2-r2.ebuild,
   python-3.3.3.ebuild:
   Typo.
